# rpgrs

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.txt
data/: actions.json  characters.json  conditions.json  effects.json  items.json  stats.json
data/maps/tower/: 0.encodedmaplayer  0.layer  1.encodedmaplayer  1.layer  map.json  sprites.json  tower.render
examples/: map_encoder.rs  players_guide.rs
examples/example_game/: main.rs
examples/example_scene/: animator.rs  components.rs  keyboard.rs  main.rs  physics.rs  renderer.rs  scripts.rs
examples/sdl/: main.rs
rpg/: Cargo.toml
rpg/data/: actions.json  characters.json  effects.json  items.json  stats.json
rpg/src/: action.rs  battle.rs  character.rs  common.rs  effect.rs  encyclopedia.rs  item.rs  lib.rs  party.rs  stats.rs
rpg/tests/: create_character.rs  integration_tests.rs
src/: action.rs  battle.rs  battlecli.rs  character.rs  common.rs  condition.rs  effect.rs  encyclopedia.rs  formula.rs  item.rs  lib.rs  main.rs  map.rs  party.rs  scene.rs  scenecli.rs  sprite.rs  stats.rs
src/battle/: battleui.rs  tests.rs
src/scene/: sceneui.rs
tests/: integration_tests.rs
