cargo-features = ["edition2021"]

[package]
name = "rpgrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
termion = "1.5.6"
