cargo-features = ["edition2021"]

[package]
name = "rpgrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
glob = "0.3.1"
log = "^0.4.14"
rand = "^0.8.3"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
specs = "0.14"
specs-derive = "0.4"
termion = "1.5.6"
tiled = "0.11.1"

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image"]
